# my-rust-backend-template

./: .gitignore  Cargo.toml  README.md
migrations/: mydb_v1.sql
src/: lib.rs  main.rs
src/database/: mod.rs
src/entities/: user.rs
src/handlers/: mod.rs  not_found.rs  users.rs
src/models/: error.rs  hasing_password.rs  mod.rs  user.rs
src/repositories/: hasing_password.rs  mod.rs  users.rs
src/services/: users.rs
src/setting/: mod.rs
