[package]
name = "rust-backend-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
chrono = "0.4.38"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
config = "0.14.0"
argon2 = "0.5.3"
